add app state to readme

--- a/README
+++ b/README
@@ -33,3 +33,33 @@ https://github.com/bobplant/steam-vdf-parser
 https://dev.to/rapidnerd/using-python-and-c-together-d4e
 
 https://github.com/Jan200101/libofdf
+
+ACF app states: 
+https://github.com/lutris/lutris/blob/master/docs/steam.rst
+
+AppState
+--------
+::
+
+    StateInvalid         0
+    StateUninstalled     1
+    StateUpdateRequired  2
+    StateFullyInstalled  4
+    StateEncrypted       8
+    StateLocked          16
+    StateFilesMissing    32
+    StateAppRunning      64
+    StateFilesCorrupt    128
+    StateUpdateRunning   256
+    StateUpdatePaused    512
+    StateUpdateStarted   1024
+    StateUninstalling    2048
+    StateBackupRunning   4096
+    StateReconfiguring   65536
+    StateValidating      131072
+    StateAddingFiles     262144
+    StatePreallocating   524288
+    StateDownloading     1048576
+    StateStaging         2097152
+    StateCommitting      4194304
+    StateUpdateStopping  8388608
